Update steps for ACS policy

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-    "asciidoc.antora.enableAntoraSupport": true
+    "asciidoc.antora.enableAntoraSupport": true,
+    "cSpell.words": [
+        "keycloak",
+        "Quarkus",
+        "RHDH",
+        "RHTAP",
+        "Sigstore",
+        "Tekton"
+    ]
 }
