--- a/content/antora.yml
+++ b/content/antora.yml
@@ -1,21 +1,27 @@
 name: modules
+title: LAB1696
 version: master
 nav:
   - modules/ROOT/nav.adoc
 
-
 asciidoc:
   attributes:
+    lab_name: "Secure CI/CD Pipeline Transformation with Jenkins and Red Hat’s Trusted Application Pipeline"
     release-version: master
     page-pagination: true
-    experimental:
-    numbered:
-    lab_name: "TAP Workshop"
+    openshift_url: https://
+    acs_url: httpis://
+    gitops_url: https://
+    gitea_customersapp_url: https://
+    username: user
+    password: pswd
+    doc_openshift_api: https://docs.redhat.com/en/documentation/openshift_container_platform/4.17/html/security_apis/secret-v1
+    doc_spiffe: https://spiffe.io/docs/latest/spire-about/spire-concepts/
+    doc_acs: https://docs.redhat.com/en/documentation/red_hat_advanced_cluster_security_for_kubernetes/4.6/html/operating/manage-network-policies#network-graph-20-view_manage-network-policies
     guid: my-guid
     ssh_user: devops
     ssh_password: devops
-    ssh_command: ssh devops@bastion.{guid}.example.opentlc.com
-
-  extensions:
-    - ./content/lib/tab-block.js
-    - ./content/lib/remote-include-processor.js
+    ssh_command: ssh someone@example.com
+    page-links:
+    - url: https://redhat.com
+      text: Red Hat
