--- a/default-site.yml
+++ b/default-site.yml
@@ -1,25 +1,27 @@
+---
 site:
-  title: "Supercharge Developer Experience with Red Hat Developer Hub"
-  #url: https://redhat-scholars.github.io/course-template
+  title: LB1696 - Secure CI/CD Pipeline Transformation with Jenkins and Red Hat’s Trusted Application Pipeline
+  url: https://redhat-scholars.github.io/course-template
   start_page: modules::index.adoc
+
+content:
+  sources:
+    - url: .
+      start_path: content
 
 ui:
   bundle:
-    url: https://github.com/rhpds/showroom_theme_summit/releases/download/v0.0.1/ui-bundle.zip
+    url: https://github.com/rhpds/rhdp_showroom_theme/releases/download/v0.0.1/ui-bundle.zip
     snapshot: true
   supplemental_files:
     - path: ./content/supplemental-ui
+    - path: ./content/lib
     - path: .nojekyll
     - path: ui.yml
       contents: "static_files: [ .nojekyll ]"
 
-content:
-  sources:
-    - url: ./
-      start_path: content
+runtime:
+  cache_dir: ./.cache/antora
 
 output:
   dir: ./www
-
-runtime:
-  cache_dir: ./.cache/antora
