--- a/default-site.yml
+++ b/default-site.yml
@@ -23,5 +23,10 @@ ui:
 runtime:
   cache_dir: ./.cache/antora
 
+antora:
+  extensions:
+    - require: ./content/lib/dev-mode.js
+      enabled: true
+
 output:
   dir: ./www
